--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,9 @@
                         <li class="nav-item">
 							<a class="nav-link active" aria-current="page" href="{{ path('app_home') }}#addvideo">Ajouter une vidéo</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="{{ path('app_home') }}#addvideo">Test menu</a>
+						</li>
 					</ul>
 				</div>
 			</div>
